<resources>
    <string name="app_name">MyAppPAS</string>
    <string name="message_registration">Register a new user</string>
    <string name="layout1">layoutTextData</string>
    <string name="data_email">Email</string>
    <string name="data_password">Password</string>
    <string name="signin_buttton">Sign In</string>
    <string name="register_button">Register</string>
    <string name="login_buttton">Log In</string>
    <string name="logout_buttton">Log Out</string>
    <string name="menu_weather">Weather query(Choose one)</string>
    <string name="choose_city">Choose your city</string>
    <string name="choose_ip">Choose your IP</string>
    <string name="weather_button">Get weather</string>
    <string name="save_button">Save data</string>
    <string name="sensors_button">Sensors data</string>
    <string name="send_data">Send data to cloud</string>
</resources>