<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <Button
        android:id="@+id/logOutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:onClick="logOutSession"
        android:text="@string/logout_buttton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextWeather"
        android:layout_width="230dp"
        android:layout_height="45dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/menu_weather"
        android:textAllCaps="false"
        android:textColor="#C50A0A"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextIP"
        android:layout_width="217dp"
        android:layout_height="43dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/choose_ip"
        android:inputType="textPersonName|text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCity" />

    <EditText
        android:id="@+id/editTextCity"
        android:layout_width="217dp"
        android:layout_height="46dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/choose_city"
        android:inputType="textPersonName|text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextWeather" />

    <Button
        android:id="@+id/weatherButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:onClick="getWeather"
        android:text="@string/weather_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logOutButton" />

    <ScrollView
        android:layout_width="289dp"
        android:layout_height="175dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="109dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextIP">

        <TextView
            android:id="@+id/weatherResults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="29dp"
        android:text="@string/save_button"
        android:onClick="saveDataWeather"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherButton" />

</androidx.constraintlayout.widget.ConstraintLayout>